CSS) test shop items issue
test for fixing shop items that don't align center.

--- a/ttogel.css
+++ b/ttogel.css
@@ -311,7 +311,7 @@
   }
   .shopswrapper {
     display: flex;
-    /* align-contents: space-around; */
+    width: 100%;
     justify-content: space-around;
     padding-bottom: 60px;
     align-items: center;
